--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +13,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <section class="mt-10">
+        <div>
+            <h2 class="text-3xl text-center font-medium">AI Universe Hub</h2>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-[80%] mx-auto my-10 gap-5" id="card-container">
+
+        </div>
+        <div class="text-center my-10" id="show-all-container">
+          <button onclick="showBtn()" class="btn bg-sky-500 text-white">Show All</button>
+        </div>
+    </section>
 
     <script src="./script/app.js"></script>
   </body>
