--- a/index.html
+++ b/index.html
@@ -14,17 +14,54 @@
   </head>
   <body>
     <section class="mt-10">
-        <div>
-            <h2 class="text-3xl text-center font-medium">AI Universe Hub</h2>
-        </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-[80%] mx-auto my-10 gap-5" id="card-container">
-
-        </div>
-        <div class="text-center my-10" id="show-all-container">
-          <button onclick="showBtn()" class="btn bg-sky-500 text-white">Show All</button>
-        </div>
+      <div>
+        <h2 class="text-3xl text-center font-medium">AI Universe Hub</h2>
+      </div>
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-[80%] mx-auto my-10 gap-5"
+        id="card-container"
+      ></div>
+      <div class="text-center my-10" id="show-all-container">
+        <button onclick="showBtn()" class="btn bg-sky-500 text-white">
+          Show All
+        </button>
+      </div>
+      <div id="modal-container">
+        
+      </div>
     </section>
 
     <script src="./script/app.js"></script>
   </body>
 </html>
+
+<!-- <div class = 'flex justify-between items-center gap-4'>
+  <div class = 'border border-red-400 bg-red-100 p-3 text-center rounded-xl'>
+    <h3 class = "text-2xl font-medium"> ${productInfo.tool_name}</h3>
+    <div>
+      <button class = "p-5 bg-white"> btn</button>
+      <button class = "p-5 bg-white"> btn</button>
+      <button class = "p-5 bg-white"> btn</button>
+    </div>
+    <div class = 'flex justify-between items-center'>
+      <div>
+          <h1>Feature</h1>
+          <p> </p>
+          <p> </p>
+      </div>
+      <div>
+        <h1>Integrations</h1>
+        <p> </p>
+        <p> </p>
+      </div>
+    </div>
+  </div> 
+  <div class= 'border rounded-xl p-3'>
+    <img src = "${productInfo.image_link[0]}"/>
+    <h1>Integrations</h1>
+    <p> </p>
+  </div> 
+</div>
+<div class="modal-action text-center">
+  <button class="btn bg-red-500 text-white">Close</button>
+</div> -->
